# pdg2025-fcen-uba-TP-1

./: LICENSE  README.md
forms/: GuiMainWindow.ui
qt/: DGP2025-A1.pri  DGP2025-A1.pro
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Faces.cpp  Faces.hpp
src/gui/: GuiAboutDialog.cpp  GuiAboutDialog.hpp  GuiGLBuffer.cpp  GuiGLBuffer.hpp  GuiGLHandles.cpp  GuiGLHandles.hpp  GuiGLShader.cpp  GuiGLShader.hpp  GuiGLWidget.cpp  GuiGLWidget.hpp  GuiMainWindow.cpp  GuiMainWindow.hpp  GuiQtLogo.cpp  GuiQtLogo.hpp  GuiStrings.hpp  GuiToolsWidget.cpp  GuiToolsWidget.hpp  GuiViewerApp.cpp  GuiViewerData.cpp  GuiViewerData.hpp
src/io/: AppLoader.cpp  AppLoader.hpp  AppSaver.cpp  AppSaver.hpp  CMakeLists.txt  Loader.hpp  LoaderStl.cpp  LoaderStl.hpp  LoaderWrl.cpp  LoaderWrl.hpp  Saver.hpp  SaverStl.cpp  SaverStl.hpp  SaverWrl.cpp  SaverWrl.hpp  StrException.hpp  Tokenizer.cpp  Tokenizer.hpp  TokenizerFile.cpp  TokenizerFile.hpp  TokenizerString.cpp  TokenizerString.hpp
src/test/: CMakeLists.txt  dgpTest1.cpp
src/util/: BBox.cpp  BBox.hpp  CMakeLists.txt  StaticRotation.cpp  StaticRotation.hpp
src/wrl/: Appearance.cpp  Appearance.hpp  CMakeLists.txt  Group.cpp  Group.hpp  ImageTexture.cpp  ImageTexture.hpp  IndexedFaceSet.cpp  IndexedFaceSet.hpp  IndexedLineSet.cpp  IndexedLineSet.hpp  Material.cpp  Material.hpp  Node.cpp  Node.hpp  PixelTexture.cpp  PixelTexture.hpp  Rotation.cpp  Rotation.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneGraphProcessor.cpp  SceneGraphProcessor.hpp  SceneGraphTraversal.cpp  SceneGraphTraversal.hpp  Shape.cpp  Shape.hpp  Transform.cpp  Transform.hpp
